# CodeCraft

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
codecraft/: __init__.py  config.py  main.py
codecraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
codecraft/agents/: __init__.py  architect.py  base.py  developer.py  devops.py  manager.py  planner.py  researcher.py  reviewer.py  security.py  tester.py
codecraft/api/: __init__.py  server.py
codecraft/cli/: __init__.py
codecraft/deploy/: __init__.py
codecraft/llm/: __init__.py  base.py  gemini.py  groq.py  models.py  ollama.py  openai.py  openrouter.py
codecraft/memory/: __init__.py  store.py
codecraft/orchestrator/: __init__.py  engine.py  thinktank.py
codecraft/state/: __init__.py  database.py  store.py
codecraft/tools/: __init__.py  base.py  code_runner.py  discovery.py  filesystem.py  git.py  github_search.py  package_search.py  shell.py  web_search.py
webui/: index.html  package-lock.json  package.json
webui/public/: manifest.json
webui/src/: App.css  App.tsx
webui/src/components/: AdminPanel.tsx  AgentTheater.tsx  ConversationView.tsx  Dashboard.tsx  ProjectDetail.tsx  ProjectSetup.tsx
webui/src/hooks/: useWebSocket.ts
webui/src/lib/: api.ts
