[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["codecraft*"]

[project]
name = "codecraft"
version = "0.1.0"
description = "Multi-agent AI-powered software development platform — from idea to deployed product"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "CodeCraft Team"}]
keywords = ["ai", "agent", "code-generation", "orchestration", "llm", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-socketio>=5.11.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.5.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "watchfiles>=0.22.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
deploy = [
    "paramiko>=3.4.0",
    "docker>=7.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
codecraft = "codecraft.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
